kubernetes/saver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saver
  namespace: goingtorest
spec:
  selector:
    matchLabels:
      app: saver
  template:
    metadata:
      labels:
        app: saver
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: korsakjakub/goingtorest-saver:v1
          name: saver
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: goingtorest-config
