kubernetes/poster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poster
  namespace: goingtorest
spec:
  selector:
    matchLabels:
      app: poster
  template:
    metadata:
      labels:
        app: poster
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: korsakjakub/goingtorest-poster:v1
          name: poster
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 6666
              name: poster
      volumes:
        - name: config
          configMap:
            name: goingtorest-config
---
kind: Service
apiVersion: v1
metadata:
  name: poster-svc
  namespace: goingtorest
spec:
  selector:
    app: poster
  ports:
  - port: 6666
  type: ClusterIP
