kubernetes/rabbit-redis.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: rabbitmq
  namespace: goingtorest
spec:
  ports:
  - port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    run: rabbitmq
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: rabbitmq
  name: rabbitmq
spec:
  containers:
  - image: rabbitmq:3.10
    name: rabbitmq
    ports:
    - containerPort: 5672
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: redis-svc
  namespace: goingtorest
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    run: redis-svc
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: redis-svc
  name: redis-svc
spec:
  containers:
  - image: redis:7.0
    name: redis-svc
    ports:
    - containerPort: 6379
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
