kubernetes/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: rabbitmq
  namespace: goingtorest
spec:
  ports:
  - port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    run: rabbitmq
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: rabbitmq
  name: rabbitmq
spec:
  containers:
  - image: rabbitmq:3.10
    name: rabbitmq
    ports:
    - containerPort: 5672
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
