kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: redis
  namespace: goingtorest
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    run: redis
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: redis
  name: redis
spec:
  containers:
  - image: redis:7.0
    name: redis
    ports:
    - containerPort: 6379
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
