kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: goingtorest
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /add(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: poster-svc
            port:
              number: 6666
      - path: /size(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: explorer-svc
            port:
              number: 80
#     - path: /(.*)
#       pathType: Prefix
#       backend:
#         service:
#           name: aks-helloworld-one
#           port:
#             number: 80
